@@ -1,0 +1,8 @@
+#Contributing to Patternlab - Node
+If you'd like to contribute to patternlab - node, please do so! There is always a lot of ground to cover, with patternlab - php being so feature-rich.  
+
+No pull request is too small.
+
+##Guidelines
+1. Please keep your pull requests concise
+2. _ALWAYS_ submit it against the [dev branch](https://github.com/pattern-lab/patternlab-node/tree/dev). If this does not occur, I will first, try to redirect you gently, second, port over your contribution manually if time allows, and/or third, close your pull request.
