@@ -1,5 +1,11 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
+PL-node-v0.1.1
+ - FIX: Removed View All Pattern SubItem Link Logic, no longer in reference implementation
+ - ADD: Flag for generating debug file
+ - ADD: Travis CI test support!
+ - ADD: Contributing file
+
 PL-node-v0.1.0
  - FIX: Links to patterns did not work when visited from a server
  - FIX: Patterns with hyphens in the name were breaking the iframe messaging
